a lot of changes

--- a/ProyectoDWS/src/main/resources/templates/aboutUS.html
+++ b/ProyectoDWS/src/main/resources/templates/aboutUS.html
@@ -13,7 +13,7 @@
             <nav>
                 <ul>
                     <li><a href="/">INICIO</a></li>
-                    <li><a href="subjects.html">ASIGNATURAS</a></li>
+                    <li><a href="/subjects">ASIGNATURAS</a></li>
                     <li><a href="contact.html">CONTACTO</a></li>
                 </ul>
             </nav>
