--- a/ProyectoDWS/src/main/resources/templates/deleted_course.html
+++ b/ProyectoDWS/src/main/resources/templates/deleted_course.html
@@ -6,8 +6,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
 </head>
 <body>
-<p>Subject has been saved.</p>
-<p>You have created {{numPosts}} so far.</p>
-<a href="/">Back</a>
+<div class="wrapper">
+    <div class="container">
+        <p>Course has been deleted.</p>
+    </div>
+    <div class="button">
+        <a href="/static">Back</a>
+    </div>
+</div>
 </body>
 </html>
