--- a/ProyectoDWS/src/main/resources/templates/index.html
+++ b/ProyectoDWS/src/main/resources/templates/index.html
@@ -13,6 +13,7 @@
                 <ul>
                     <li><a href="/">INICIO</a></li>
                     <li><a href="courses.html">CURSOS</a></li>
+                    <li><a href="/subjects">ASIGNATURAS</a></li>
                     <li><a href="aboutUS.html">SOBRE NOSOTROS</a></li>
                     <li><a href="contact.html">CONTACTO</a></li>
                 </ul>
@@ -45,9 +46,6 @@
                 <a href="physics.html"><u>CLICK AQUÍ</u></a>
             </div>
         </div>
-    </div>
-    <div class="contenedor-botones">
-        <button class="botones" onclick="window.location.href='./subject/new'">AÑADIR ASIGNATURA</button>
     </div>
 </section>
 </body>
