--- a/ProyectoDWS/src/main/resources/templates/show_courses_for_subject.html
+++ b/ProyectoDWS/src/main/resources/templates/show_courses_for_subject.html
@@ -15,6 +15,6 @@
     {{/post.associatedCourses}}
 </ul>
 
-<a href="/">Volver a la página principal</a>
+<a href="/static">Volver a la página principal</a>
 </body>
 </html>
