--- a/ProyectoDWS/src/main/resources/templates/contact.html
+++ b/ProyectoDWS/src/main/resources/templates/contact.html
@@ -15,8 +15,8 @@
             <nav>
                 <ul>
                     <li><a href="/">INICIO</a></li>
-                    <li><a href="subjects.html">ASIGNATURAS</a></li>
-                    <li><a href="aboutUS.html">SOBRE NOSOTROS</a></li>
+                    <li><a href="/subjects">ASIGNATURAS</a></li>
+                    <li><a href="/aboutUS">SOBRE NOSOTROS</a></li>
                 </ul>
             </nav>
         </div>
