--- a/ProyectoDWS/src/main/resources/templates/courses.html
+++ b/ProyectoDWS/src/main/resources/templates/courses.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Cursos</title>
-  <link rel="stylesheet" href="./css/style_Courses.css">
+  <link rel="stylesheet" href="../static/css/style_Courses.css">
   <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
 </head>
 <body>
 <header class="header">
   <nav>
     <ul class="nav-links">
-      <li><a href="/">INICIO</a></li>
+      <li><a href="/static">INICIO</a></li>
       <li><a href="courses.html">CURSOS</a></li>
       <li><a href="aboutUS.html">SOBRE NOSOTROS</a></li>
     </ul>
