Arreglo pequeños errores

--- a/ProyectoDWS/src/main/resources/templates/aboutUS.html
+++ b/ProyectoDWS/src/main/resources/templates/aboutUS.html
@@ -14,7 +14,7 @@
                 <ul>
                     <li><a href="/">INICIO</a></li>
                     <li><a href="/subjects">ASIGNATURAS</a></li>
-                    <li><a href="contact.html">CONTACTO</a></li>
+                    <li><a href="/contact">CONTACTO</a></li>
                 </ul>
             </nav>
         </div>
