--- a/ProyectoDWS/src/main/resources/templates/courses.html
+++ b/ProyectoDWS/src/main/resources/templates/courses.html
@@ -12,7 +12,7 @@
     <ul class="nav-links">
       <li><a href="/static">INICIO</a></li>
       <li><a href="courses.html">CURSOS</a></li>
-      <li><a href="aboutUS.html">SOBRE NOSOTROS</a></li>
+      <li><a href="aboutUS">SOBRE NOSOTROS</a></li>
     </ul>
   </nav>
   <a href="/enrolled_courses" class="btn"><button>MIS CURSOS</button></a>
