--- a/ProyectoDWS/src/main/resources/templates/index.html
+++ b/ProyectoDWS/src/main/resources/templates/index.html
@@ -12,10 +12,10 @@
             <nav>
                 <ul>
                     <li><a href="/">INICIO</a></li>
-                    <li><a href="courses.html">CURSOS</a></li>
+                    <li><a href="/courses">CURSOS</a></li>
                     <li><a href="/subjects">ASIGNATURAS</a></li>
-                    <li><a href="aboutUS.html">SOBRE NOSOTROS</a></li>
-                    <li><a href="contact.html">CONTACTO</a></li>
+                    <li><a href="/aboutUS">SOBRE NOSOTROS</a></li>
+                    <li><a href="/contact">CONTACTO</a></li>
                 </ul>
             </nav>
             <a href="/enrolled_courses" class="btn"><button>MIS CURSOS</button></a>
