--- a/ProyectoDWS/src/main/resources/templates/subjects.html
+++ b/ProyectoDWS/src/main/resources/templates/subjects.html
@@ -13,8 +13,8 @@
             <nav>
                 <ul>
                     <li><a href="/">INICIO</a></li>
-                    <li><a href="aboutUS.html">SOBRE NOSOTROS</a></li>
-                    <li><a href="contact.html">CONTACTO</a></li>
+                    <li><a href="aboutUS">SOBRE NOSOTROS</a></li>
+                    <li><a href="contact">CONTACTO</a></li>
                 </ul>
             </nav>
         </div>
