Arreglo pequeños errores1

--- a/ProyectoDWS/src/main/resources/templates/courses.html
+++ b/ProyectoDWS/src/main/resources/templates/courses.html
@@ -10,7 +10,7 @@
 <header class="header">
   <nav>
     <ul class="nav-links">
-      <li><a href="/static">INICIO</a></li>
+      <li><a href="/">INICIO</a></li>
       <li><a href="courses.html">CURSOS</a></li>
       <li><a href="aboutUS">SOBRE NOSOTROS</a></li>
     </ul>
