--- a/ProyectoDWS/src/main/resources/templates/new_subject.html
+++ b/ProyectoDWS/src/main/resources/templates/new_subject.html
@@ -1,22 +1,21 @@
-<!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
     <meta charset="UTF-8">
-    <title>Añadir Nueva Asignatura</title>
+    <title>Idiomas</title>
     <link rel="stylesheet" href="/css/style_Courses.css">
     <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="container">
-    <h1>Añadir Nueva Asignatura</h1>
-    <form action="/subjects/new" method="post">
-        <label for="title">Título:</label>
-        <input type="text" id="title" name="title" required/>
+    <form accept-charset="UTF-8" action="/subjects/new" method="post" enctype="multipart/form-data">
+        <p>Title:</p>
+        <input type='text' name='title'/>
+        <p>Text:</p>
+        <textarea name='text' rows=5 cols=40></textarea>
+        <p>Image file:</p>
+        <input type='file' name='image' accept=".jpg, .jpeg"/>
 
-        <label for="text">Descripción:</label>
-        <textarea id="text" name="text" rows="5" cols="40" required></textarea>
-
-        <input type="submit" value="Guardar"/>
+        <input type='submit' value='Save'/>
     </form>
 </div>
 </body>
