Arreglo pequeños errores redirecciones htmls

--- a/ProyectoDWS/src/main/resources/templates/form.html
+++ b/ProyectoDWS/src/main/resources/templates/form.html
@@ -12,7 +12,7 @@
         <div class="menu">
             <nav>
                 <ul>
-                    <li><a href="/static">INICIO</a></li>
+                    <li><a href="/">INICIO</a></li>
                     <li><a href="aboutUS.html">SOBRE NOSOTROS</a></li>
                     <li><a href="contact.html">CONTACTO</a></li>
                 </ul>
