--- a/ProyectoDWS/src/main/resources/templates/courses.html
+++ b/ProyectoDWS/src/main/resources/templates/courses.html
@@ -11,7 +11,7 @@
   <nav>
     <ul class="nav-links">
       <li><a href="/">INICIO</a></li>
-      <li><a href="courses.html">CURSOS</a></li>
+      <li><a href="courses">CURSOS</a></li>
       <li><a href="aboutUS">SOBRE NOSOTROS</a></li>
     </ul>
   </nav>
