--- a/ProyectoDWS/src/main/resources/templates/deleted_subject.html
+++ b/ProyectoDWS/src/main/resources/templates/deleted_subject.html
@@ -11,7 +11,7 @@
         <p>Subject has been deleted.</p>
     </div>
     <div class="button">
-        <a href="/static">Back</a>
+        <a href="/">Back</a>
     </div>
 </div>
 </body>
