--- a/ProyectoDWS/src/main/resources/templates/maths.html
+++ b/ProyectoDWS/src/main/resources/templates/maths.html
@@ -14,7 +14,7 @@
         <div class="menu">
             <nav>
                 <ul>
-                    <li><a href="/static">INICIO</a></li>
+                    <li><a href="/">INICIO</a></li>
                     <li><a href="subjects.html">ASIGNATURAS</a></li>
                     <li><a href="aboutUS.html">SOBRE NOSOTROS</a></li>
                     <li><a href="contact.html">CONTACTO</a></li>
