Maths, physics, ds

--- a/ProyectoDWS/src/main/resources/templates/index.html
+++ b/ProyectoDWS/src/main/resources/templates/index.html
@@ -32,18 +32,18 @@
             <div class="card">
                 <img src="/imageStatic/maths.png" alt="Matemáticas">
                 <h3>QUIERO APRENDER<br>MATES</h3>
-                <a href="maths.html"><u>CLICK AQUÍ</u></a>
+                <a href="/maths"><u>CLICK AQUÍ</u></a>
             </div>
             <div id="medium" class="card">
                 <img src="/imageStatic/ds.png" alt="Ed">
 
                 <h3>QUIERO APRENDER ED</h3>
-                <a href="ds.html"><u>CLICK AQUÍ</u></a>
+                <a href="/ds"><u>CLICK AQUÍ</u></a>
             </div>
             <div class="card">
                 <img src="/imageStatic/physics.png" alt="Física">
                 <h3>QUIERO APRENDER FISICA</h3>
-                <a href="physics.html"><u>CLICK AQUÍ</u></a>
+                <a href="/physics"><u>CLICK AQUÍ</u></a>
             </div>
         </div>
     </div>
