--- a/ProyectoDWS/src/main/resources/templates/ds.html
+++ b/ProyectoDWS/src/main/resources/templates/ds.html
@@ -15,9 +15,9 @@
             <nav>
                 <ul>
                     <li><a href="/">INICIO</a></li>
-                    <li><a href="subjects.html">ASIGNATURAS</a></li>
-                    <li><a href="aboutUS.html">SOBRE NOSOTROS</a></li>
-                    <li><a href="contact.html">CONTACTO</a></li>
+                    <li><a href="subjects">ASIGNATURAS</a></li>
+                    <li><a href="aboutUS">SOBRE NOSOTROS</a></li>
+                    <li><a href="contact">CONTACTO</a></li>
                 </ul>
             </nav>
         </div>
