--- a/ProyectoDWS/src/main/resources/templates/edit_subject.html
+++ b/ProyectoDWS/src/main/resources/templates/edit_subject.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Editar Asignatura</title>
-    <link rel="stylesheet" href="/css/style_Courses.css">
+    <title>Edit Course</title>
+    <link rel="stylesheet" href="/css/editCourse.css">
     <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="container">
-    <h1>Editar Asignatura</h1>
-    <form action="/subjects/update/{id}" method="post">
-        <label for="title">Título:</label>
-        <input type="text" id="title" name="title" value="<!-- Aquí va el título de la asignatura -->" required/>
+    <form accept-charset="UTF-8" action="/subject/{{id}}/edited_subject" method="post">
+        <label for="title">Title:</label>
+        <input type="text" id="title" name="title" value="{{subject.title}}" required><br>
 
-        <label for="text">Descripción:</label>
-        <textarea id="text" name="text" rows="5" cols="40" required><!-- Aquí va la descripción de la asignatura --></textarea>
+        <label for="text">Text:</label>
+        <textarea id="text" name="text" required>{{subject.text}}</textarea><br>
 
-        <input type="submit" value="Guardar"/>
+        <label for="image">Change Image:</label>
+        <input type="file" id="image" name="image"><br>
+
+
+        <input type="submit" value="Save">
+        <a href="/subject/{{id}}">Cancel</a>
     </form>
 </div>
 </body>
