--- a/ProyectoDWS/src/main/resources/templates/edited_subject.html
+++ b/ProyectoDWS/src/main/resources/templates/edited_subject.html
@@ -7,15 +7,15 @@
 </head>
 <body>
 <div class="wrapper">
-    <p>Course Edited Successfully.</p>
-    <p>Details of the edited course:</p>
+    <p>Subject Edited Successfully.</p>
+    <p>Details of the edited subject:</p>
     <div class="container">
-        <p><u>Title</u><br>{{course.title}}</p>
+        <p><u>Title</u><br>{{subject.title}}</p>
         <br>
-        <p><u>Description</u><br>{{course.description}}</p>
+        <p><u>Description</u><br>{{subject.text}}</p>
     </div>
     <div class="button">
-        <a href="/courses">Back to Courses</a>
+        <a href="/subjects">Back to Subjects</a>
     </div>
 </div>
 </body>
