--- a/ProyectoDWS/src/main/resources/templates/enrolled_subject.html
+++ b/ProyectoDWS/src/main/resources/templates/enrolled_subject.html
@@ -1,18 +1,16 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Cursos</title>
-    <link rel="stylesheet" href="/css/savedCourse.css">
+    <title>Asignaturas</title>
+    <link rel="stylesheet" href="/css/enrolled_subject.css">
     <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
 </head>
-<body>
 <div class="container">
-    <p>El curso ha sido guardado correctamente.</p>
-    <br>
-    <p>Actualmente hay {{numCourses}} cursos disponibles.</p>
+    <p>Te has apuntado correctamente en la asignatura</p>
     <br>
     <div class="button">
-        <a href="/courses">Back</a>
+        <a href="/subjects">Volver a la lista de asignaturas</a>
     </div>
 </div>
 </body>
