--- a/ProyectoDWS/src/main/resources/templates/new_subject.html
+++ b/ProyectoDWS/src/main/resources/templates/new_subject.html
@@ -2,12 +2,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Idiomas</title>
-    <link rel="stylesheet" href="/css/style_Courses.css">
+    <link rel="stylesheet" href="/css/newSubject.css">
     <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="container">
-    <form accept-charset="UTF-8" action="/subjects/new" method="post" enctype="multipart/form-data">
+    <form accept-charset="UTF-8" action="/subjects/saved" method="post" enctype="multipart/form-data">
         <p>Title:</p>
         <input type='text' name='title'/>
         <p>Text:</p>
