--- a/ProyectoDWS/src/main/resources/templates/aboutUS.html
+++ b/ProyectoDWS/src/main/resources/templates/aboutUS.html
@@ -13,6 +13,7 @@
             <nav>
                 <ul>
                     <li><a href="/">INICIO</a></li>
+                    <li><a href="/courses">CURSOS</a></li>
                     <li><a href="/subjects">ASIGNATURAS</a></li>
                     <li><a href="/contact">CONTACTO</a></li>
                 </ul>
