--- a/ProyectoDWS/src/main/resources/templates/contact.html
+++ b/ProyectoDWS/src/main/resources/templates/contact.html
@@ -15,6 +15,7 @@
             <nav>
                 <ul>
                     <li><a href="/">INICIO</a></li>
+                    <li><a href="/courses">CURSOS</a></li>
                     <li><a href="/subjects">ASIGNATURAS</a></li>
                     <li><a href="/aboutUS">SOBRE NOSOTROS</a></li>
                 </ul>
