--- a/ProyectoDWS/src/main/resources/templates/my_subjects.html
+++ b/ProyectoDWS/src/main/resources/templates/my_subjects.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Asignaturas Matriculadas</title>
-    <link rel="stylesheet" href="/css/style_Courses.css">
+    <link rel="stylesheet" href="/css/my_subjects.css">
     <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
 </head>
 <body>
 <header class="header">
-    <p>ASIGNATURAS MATRICULADAS</p>
+    <h1>ASIGNATURAS MATRICULADAS</h1>
 </header>
 <div class="list-subjects">
     <ul>
