--- a/ProyectoDWS/src/main/resources/templates/my_courses.html
+++ b/ProyectoDWS/src/main/resources/templates/my_courses.html
@@ -13,7 +13,7 @@
 <div class="list-courses">
     <ul>
         {{#enrolledCourses}}
-        <li><u>{{title}}</u><br>{{description}}<br></li>
+        <li><u>{{subject}}</u><br>{{title}}<br></li>
         {{/enrolledCourses}}
     </ul>
 </div>
