cambios para css

--- a/ProyectoDWS/src/main/resources/templates/aboutUS.html
+++ b/ProyectoDWS/src/main/resources/templates/aboutUS.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>AboutUS</title>
-    <link rel="stylesheet" href="/css/aboutUs.css">
+    <link rel="stylesheet" href="/aboutUs.css">
     <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
 </head>
 <body>
