--- a/ProyectoDWS/src/main/resources/templates/index.html
+++ b/ProyectoDWS/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>AcademiaSaber</title>
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
 </head>
 <body>
