--- a/ProyectoDWS/src/main/resources/templates/my_courses.html
+++ b/ProyectoDWS/src/main/resources/templates/my_courses.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Cursos Matriculados</title>
-    <link rel="stylesheet" href="/css/my_subjects.css">
+    <link rel="stylesheet" href="/my_subjects.css">
     <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
 </head>
 <body>
