--- a/ProyectoDWS/src/main/resources/templates/subject_courses.html
+++ b/ProyectoDWS/src/main/resources/templates/subject_courses.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/subject_course.css">
+<link rel="stylesheet" href="/subject_course.css">
 <h1>Cursos de {{subject.title}}</h1>
 
 <ul>
