--- a/ProyectoDWS/src/main/resources/templates/subjects.html
+++ b/ProyectoDWS/src/main/resources/templates/subjects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Asignaturas</title>
-    <link rel="stylesheet" href="/css/subjects2.css">
+    <link rel="stylesheet" href="/subjects2.css">
     <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
 </head>
 <body>
