--- a/ProyectoDWS/src/main/resources/templates/courses.html
+++ b/ProyectoDWS/src/main/resources/templates/courses.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Cursos</title>
-  <link rel="stylesheet" href="/css/courses.css">
+  <link rel="stylesheet" href="/courses.css">
   <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
 </head>
 <body>
