--- a/ProyectoDWS/src/main/resources/templates/edited_subject.html
+++ b/ProyectoDWS/src/main/resources/templates/edited_subject.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Cursos</title>
-    <link rel="stylesheet" href="/css/edited_courses.css">
+    <link rel="stylesheet" href="/edited_courses.css">
     <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
 </head>
 <body>
