--- a/ProyectoDWS/src/main/resources/templates/enrolled_students.html
+++ b/ProyectoDWS/src/main/resources/templates/enrolled_students.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Estudiantes Matriculados</title>
-    <link rel="stylesheet" href="/css/style_Courses.css">
+    <link rel="stylesheet" href="/style_Courses.css">
     <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
 </head>
 <body>
