--- a/ProyectoDWS/src/main/resources/templates/enrolled_subject.html
+++ b/ProyectoDWS/src/main/resources/templates/enrolled_subject.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Asignaturas</title>
-    <link rel="stylesheet" href="/css/enrolled_subject.css">
+    <link rel="stylesheet" href="/enrolled_subject.css">
     <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
 </head>
 <div class="container">
