--- a/ProyectoDWS/src/main/resources/templates/form.html
+++ b/ProyectoDWS/src/main/resources/templates/form.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Añadir Asignatura</title>
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
 </head>
 <body>
