--- a/ProyectoDWS/src/main/resources/templates/maths.html
+++ b/ProyectoDWS/src/main/resources/templates/maths.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matemáticas - Información de la Asignatura</title>
-    <link rel="stylesheet" href="/css/subjects.css">
+    <link rel="stylesheet" href="/subjects.css">
     <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
 </head>
 <body>
