--- a/ProyectoDWS/src/main/resources/templates/show_course.html
+++ b/ProyectoDWS/src/main/resources/templates/show_course.html
@@ -22,6 +22,8 @@
     <a href="/course/{{id}}/edit">Edit course</a>
     <br>
     <a href="/course/{{id}}/enrolledStudents">Alumnos matriculados</a>
+    <br>
+    <a href="/comments">Comentarios</a>
 </div>
 <br>
 <a href="/courses">Back</a>
