--- a/ProyectoDWS/src/main/resources/templates/new_subject.html
+++ b/ProyectoDWS/src/main/resources/templates/new_subject.html
@@ -9,7 +9,7 @@
 <div class="container">
     <form accept-charset="UTF-8" action="/subjects/saved" method="post" enctype="multipart/form-data">
         <p>Title:</p>
-        <input type='text' name='title'/>
+        <input type='text' name='title' required/>
         <p>Text:</p>
         <textarea name='text' rows=5 cols=40></textarea>
         <p>Image file:</p>
