--- a/ProyectoDWS/src/main/resources/templates/subjects.html
+++ b/ProyectoDWS/src/main/resources/templates/subjects.html
@@ -12,8 +12,8 @@
         <ul class="nav-links">
             <li><a href="/">INICIO</a></li>
             <li><a href="/courses">CURSOS</a></li>
-            <li><a href="/subjects">ASIGNATURAS</a></li>
             <li><a href="/aboutUS">SOBRE NOSOTROS</a></li>
+            <li><a href="/contact">CONTACTO</a></li>
         </ul>
     </nav>
     <a href="/enrolled_subject" class="btn"><button>MIS ASIGNATURAS</button></a>
