--- a/ProyectoDWS/src/main/resources/templates/courses.html
+++ b/ProyectoDWS/src/main/resources/templates/courses.html
@@ -43,7 +43,7 @@
 <p style="text-align: center;">No subjects yet.</p>
 {{/courses}}
 <div class="contenedor-botones">
-  <button class="botones" onclick="window.location.href='/course/new'">AGREGAR CURSO</button>
+  <button class="botones" onclick="window.location.href='/courses/new'">AGREGAR CURSO</button>
 </div>
 </body>
 </html>
