--- a/ProyectoDWS/src/main/resources/templates/show_subject.html
+++ b/ProyectoDWS/src/main/resources/templates/show_subject.html
@@ -1,29 +1,31 @@
-<html lang="en">
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Asignatura</title>
-    <link rel="stylesheet" href="/showCourse.css">
+    <link rel="stylesheet" href="/show_subjects.css">
     <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="container">
-    <p><u>Asignatura</u><br>{{subject.title}}</p>
+    <p><u>Asignatura</u><br th:text="${subject.title}"></p>
     <br>
-    <p><u>Descripción</u><br>{{subject.text}}</p>
+    <p><u>Descripción</u><br th:text="${subject.text}"></p>
     <div class="image">
-        <img src="/subject/{{subject.id}}/image" alt="Imagen de la asignatura">
+        <img th:src="@{/subject/{id}/image(id=${subject.id})}" alt="Imagen de la asignatura">
     </div>
-    <form action="/subject/{{subject.id}}/enroll" method="post">
+    <form th:action="@{/subject/{id}/enroll(id=${subject.id})}" method="post">
         <button type="submit">Unirse a la asignatura</button>
     </form>
 </div>
+
 <div class="button">
-    <a href="/subject/{{subject.id}}/delete">Eliminar asignatura</a>
+    <a th:href="@{/subject/{id}/delete(id=${subject.id})}">Eliminar asignatura</a>
     <br>
-    <a href="/subject/{{subject.id}}/edit">Editar asignatura</a>
+    <a th:href="@{/subject/{id}/edit(id=${subject.id})}">Editar asignatura</a>
     <br>
-    <a href="/subject/{{subject.id}}/courses">Lista de cursos</a>
+    <a th:href="@{/subject/{id}/courses(id=${subject.id})}">Lista de cursos</a>
 </div>
+
 <br>
 <a href="/subjects">Volver</a>
 </body>
